--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "https://petstore.swagger.io/v2/swagger.json",
+        url: "https://github.com/Archie-wang/swagger_test/blob/main/api-docs.json",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
